image cropping fix!

--- a/app/assets/stylesheets/evercise.css.less
+++ b/app/assets/stylesheets/evercise.css.less
@@ -235,6 +235,10 @@ label{
 	pointer-events: none;
 	opacity: 0.65;
 }
+.hidden{ 
+	pointer-events: none;
+	display:none;
+}
 .btn-large{
 	width: 280px;
 	display: inline-block;
@@ -2859,6 +2863,10 @@ body{
 			.input-prepend{
 				.input-prepend();
 			}
+			.btn-yellow{
+				width: 100px;
+				margin-top: 30px;
+			}
 		}
 	}
 	.class-list{
@@ -3377,7 +3385,7 @@ body{
 			padding: 5px 0;
 		}
 		img{
-			margin-top: 35px;
+			margin-top: 0px;
 		}
 	}
 	input#image{
